final commit - tried our best

--- a/cc_travel_start/index.html
+++ b/cc_travel_start/index.html
@@ -34,11 +34,25 @@
     <main>
         <!-- favourites -->
         <section class="favourite">
-            <div class="fav-card" id="Indonesia">
+            <div class="favourite-bg-1" id="Indonesia">
                 <h3>Indonesia</h3>
                 <p>Pixel perfect design with awesome contents</p>
                 <a href="/explorenow">Explore Now</a>
+                <!-- <img src="img/favourites/indonesia.png" alt="Image of Indonesia"> -->
             </div>
+            <div class="favourite-bg-2" id="Australia">
+                <h3>Australia</h3>
+                <p>Pixel perfect design with awesome contents</p>
+                <a href="/explorenow">Explore Now</a>
+                <!-- <img src="img/favourites/australia.png" alt="Image of Australia"> -->
+            </div>
+            <div class="favourite-bg-3" id="Switzerland">
+                <h3>Switzerland</h3>
+                <p>Pixel perfect design with awesome contents</p>
+                <a href="/explorenow">Explore Now</a>
+                <!-- <img src="img/favourites/switzerland.png" alt="Image of Switzerland"> -->
+            </div>
+
            
         </section>
         <!-- favourites-end -->
@@ -51,13 +65,77 @@
 
         <!-- popular-destination-start  -->
         <section class="popular">
-            Popular Destinations Grid Here
+            <div class="pop-dest-card" id="Italy">
+                <h4>Italy</h4>
+                <a href="/places">07 places</a>
+                <img src="img/destination/italy.png" alt="image of Italy">
+            </div>
+            <div class="pop-dest-card" id="Brazil">
+                <h4>Brazil</h4>
+                <a href="/places">03 places</a>
+                <img src="img/destination/brazil.png" alt="image of Brazil">
+            </div>
+            <div class="pop-dest-card" id="America">
+                <h4>America</h4>
+                <a href="/places">10 places</a>
+                <img src="img/destination/america.png" alt="image of America">
+            </div>
+            <div class="pop-dest-card" id="Nepal">
+                <h4>Nepal</h4>
+                <a href="/places">02 places</a>
+                <img src="img/destination/nepal.png" alt="image of Nepal">
+            </div>
+            <div class="pop-dest-card" id="Maldives">
+                <h4>Maldives</h4>
+                <a href="/places">02 places</a>
+                <img src="img/destination/maldives.png" alt="image of Maldives">
+            </div>
+            <div class="pop-dest-card" id="Indonesia">
+                <h4>Indonesia</h4>
+                <a href="/places">05 places</a>
+                <img src="img/destination/indonesia.png" alt="image of Indonesia">
+            </div>
         </section>
         <!-- popular-destination-end -->
 
         <!-- popular-places-start -->
         <section class="popular">
-            popular places here
+            <div class="pop-places-card" id="California">
+                <h3>California</h3>
+                <h4>United States of America</h4>
+                <p>£1500</p>
+                <img src="img/place/california.png" alt="golden grate bridge">
+            </div>
+            <div class="pop-places-card" id="Korola Megna">
+                <h3>Korola Megna</h3>
+                <h4>United States of America</h4>
+                <p>£1800</p>
+                <img src="img/place/korola_megna.png" alt="smol island">
+            </div>
+            <div class="pop-places-card" id="London">
+                <h3>London</h3>
+                <h4>United Kingdom</h4>
+                <p>£450</p>
+                <img src="img/place/london.png" alt="landan bruv">
+            </div>
+            <div class="pop-places-card" id="Miami Beach">
+                <h3>Miami Beach</h3>
+                <h4>United States of America</h4>
+                <p>£2500</p>
+                <img src="img/place/miami.png" alt="beach">
+            </div>
+            <div class="pop-places-card" id="California">
+                <h3>California</h3>
+                <h4>United States of America</h4>
+                <p>£2100</p>
+                <img src="img/place/california_2.png" alt="venice?">
+            </div>
+            <div class="pop-places-card" id="Saintmartine Iceland">
+                <h3>Saintmartine Iceland</h3>
+                <h4>Iceland</h4>
+                <p>£500</p>
+                <img src="img/place/iceland.png" alt="caribbean island?">
+            </div>
         </section>
         <!-- popular-places-end  -->
 
